:sparkles: feat: 스레드풀, 커넥션풀 사이즈 조정

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,6 +11,8 @@ spring:
     url: jdbc:h2:mem:holiday;MODE=MySQL;DB_CLOSE_DELAY=-1
     driver-class-name: org.h2.Driver
     username: sa
+    hikari:
+      maximum-pool-size: 30
   h2:
     console:
       enabled: true
