:memo: docs: Swagger 문서 작성

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -31,3 +31,15 @@ spring:
 logging:
   level:
     org.hibernate.sql: debug
+springdoc:
+  swagger-ui:
+    path: /swagger-ui
+    groups-order: DESC
+    operations-sorter: method
+    disable-swagger-default-url: true
+    display-request-duration: true
+  api-docs:
+    path: /v3/api-docs
+  show-actuator: true
+  default-consumes-media-type: application/json
+  default-produces-media-type: application/json
